2004-06-21  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el
	(request): 'saveplace has to be explicitely loaded
	(c-mode-common-hook): fixed some bug when using conflict resolution on c++

	* dotemacs-cust.el
	(custom): set limit to 100 saved places

	* dotemacs.el
	(request): load saveplace

	* perso/undo-browse.el:
	initial checkin

2004-06-20  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/mycode.el:
	useless code suppression

	* perso/visible-mark-mode.el
	(visible-mark-move-overlay): fixed function when visible-mark-overlay is null

	* dotemacs.el
	(find-file-guessing): new function to wrap find-file
	(kbd): use find-file-guessing with C-x C-f, suppress H-x H-f
	(ediff-keymap-setup-hook): solved conflict in keybindings

	* emacs.d/emacs-d-vars.el:
	initial checkin

	* emacs.d/emacs-d-classes.el:
	initial checkin

	* dotemacs-cust.el:
	initial checkin

	* dotgnus.el:
	use cvs Id.

	* dotemacs.el:
	use cvs Id.

	* perso/mycode.el
	(header-source): make it able to find files in other standard directories
	(c++-mode-hook): call expand-member-functions with complete filenames

	* perso/member-functions.el
	(expand-member-functions): make it work with absolute path files
	fixed indentation :)

	* perso/patches.el
	(split-window-vertically): replaced by advice
	(split-window-horizontally): replaced by advice
	added some documentation
	(switch-to-buffer): packed the previous implementation, made advices

	* dotemacs.el:
	save place by default

	* perso/visible-mark-mode.el
	(visible-mark-move-overlay): fixed nullMarkerException ;)
	(global-visible-mark-mode-exclude-alist): new list of exceptions for global mode
	(visible-mark-mode-maybe): new check for global mode
	(global-visible-mark-mode): use visible-mark-mode-maybe, fixed :group

2004-06-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el
	(request): use global-visible-mark-mode
	(add-change-log-entry): advice add-change-log-entry to use custom ChangeLog

	* perso/visible-mark-mode.el: